--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.17.1",
+    "dotenv": "^8.0.0",
     "express": "^4.15.2",
     "fs": "0.0.1-security",
     "jsonwebtoken": "^7.4.1",
